--- a/attendance section.html
+++ b/attendance section.html
@@ -563,7 +563,7 @@
     <script>
         // QR Code Generator Function
         function generateQRCode() {
-            var baseUrl = https:"//toshinoruuuu.github.io/ict312checklang/";
+            var baseUrl = "https://toshinoruuuu.github.io/ict312checklang/";
             var randomQuery = Math.random().toString(36).substring(2, 15);
             var finalUrl = baseUrl + "?id=" + randomQuery;
 
