--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
         // Function to redirect when clicking a class button
         function redirectToClass(teacherID, classID) {
-            window.location.href = `attendance section.html?teacher=${teacherID}&class=${classID}`;
+            window.location.href = `homepagestudent.html?teacher=${teacherID}&class=${classID}`;
         }
 
         document.getElementById('attendanceForm').addEventListener('submit', login);
